--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config": "~8.5.0",
+    "@expo/metro-config": "~0.17.1",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@reduxjs/toolkit": "^1.9.3",
     "@sanity/client": "^5.2.2",
     "@sanity/image-url": "^1.0.2",
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
+    "expo": "^50.0.15",
+    "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.73.6",
     "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.2.0",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "1.10.0",
     "react-native-progress": "^5.0.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "tailwindcss": "^3.2.7"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
